k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # REMOVE CLASSNAME ANNOTATION
    nginx.ingress.kubernetes.io/use-regex: "true"
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # ADD ANNOTATION
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # ADD INGRESSCLASSNAME FIELD
  tls:
    - hosts:
        - my-domain.com
        - www.my-domain.com
      secretName: my-domain-com
  rules:
    - host: my-domain.com
      http:
        paths:
          - path: /?(.*)

            pathType: ImplementationSpecific

            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)

            pathType: ImplementationSpecific

            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000

    - host: www.my-domain.com
      http:
        paths:
          - path: /?(.*)

            pathType: ImplementationSpecific

            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)

            pathType: ImplementationSpecific

            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
